# telco_retention_ai

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
01_business_understanding/: index.html
02_data_understanding/: index.html
03_data_preparation/: index.html
04_modeling/: index.html
05_evaluation/: index.html
06_project_objectives/: index.html
07_project_goals/: index.html
08_business_recommendations/: index.html
09_conclusions/: index.html
contributing/: index.html
docs/: 01_business_understanding.md  02_data_understanding.md  03_data_preparation.md  04_modeling.md  05_evaluation.md  06_project_objectives.md  07_project_goals.md  08_business_recommendations.md  09_conclusions.md  contributing.md  index.md  installation.md  project_structure.md  usage.md
installation/: index.html
notebook/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation_modeling_evaluation.ipynb
project_structure/: index.html
search/: search_index.json
usage/: index.html
